fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@
 			color:#000000;
 			font-size: 19px; 
 			display:block;
-			text-align:center;
+			text-align:left;
 		}
 
 		a:visited {
